@@ -77,7 +77,6 @@ public class AppBuilder {
 		char[] c_stderr = "";
 
 		// Copy all the app files, and do code generation
-		Stdout(ljust("Rebuilding application ...", 78, " ")).flush;
 		this.run_command("python2.6 /usr/bin/rootintootin_run " ~ _app_path ~ " application " ~ _mode, c_stdout, c_stderr);
 
 		// Print anything from stdout
